Add French, fix class.

--- a/src/en.ini
+++ b/src/en.ini
@@ -1,14 +1,14 @@
 0=just now
 1=a minute ago
-2=minutes ago
+2="{n} minutes ago"
 3=an hour ago
-4=hours ago
+4="{n} hours ago"
 5=yesterday
-6=days ago
+6="{n} days ago"
 7=a week ago
-8=weeks ago
+8="{n} weeks ago"
 9=a month ago
-10=months ago
+10="{n} months ago"
 11=a year ago
 12=over a year ago
-13=years ago
+13="{n} years ago"
