--- a/src/fr.ini
+++ b/src/fr.ini
@@ -1,14 +1,14 @@
 0=juste maintenant
-1=Il y'a une minute
-2=minutes ago
-3=an hour ago
-4=hours ago
-5=yesterday
-6=days ago
-7=a week ago
-8=weeks ago
-9=a month ago
-10=months ago
-11=a year ago
-12=over a year ago
-13=years ago
+1=il y'a une minute
+2="il y a {n} minutes"
+3=il y a une heure
+4="il y a {n} heures"
+5=hier
+6="il y a {n} jours"
+7=il y a une semaine
+8="{n} semaines plus tôt"
+9=il y a un mois
+10="il y a {n} mois"
+11=il y a un an
+12=il ya plus d'un an
+13="il y a {n} ans"
