--- a/src/ru.ini
+++ b/src/ru.ini
@@ -1,14 +1,14 @@
 0=только что
 1=минуту назад
-2="минут(ы) назад"
+2="{n} минут(ы) назад"
 3=час назад
-4=часов назад
+4="{n} часов назад"
 5=вчера
-6=дней назад
+6="{n} дней назад"
 7=неделю назад
-8=недель назад
+8="{n} недель назад"
 9=месяц назад
-10="месяц(a/ев) назад"
+10="{n} месяц(a/ев) назад"
 11=год назад
 12=более года тому назад
-13=лет тому назад
+13="{n} лет тому назад"
